# mlx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.md  quickstart.md
docs/commands/: init.md  log.md  run.md
examples/: catboost_example.py  pytorch_example.py  sklearn_example.py
mlx/: __init__.py  cli.py
mlx/commands/: __init__.py  compare.py  export.py  init.py  log.py  ls.py  run.py  status.py
mlx/core/: __init__.py  experiment.py  metrics.py  params.py  run.py
mlx/storage/: __init__.py  db.py  filesystem.py
mlx/utils/: __init__.py  display.py
tests/: conftest.py  test_cli.py  test_experiment.py  test_metrics_params.py  test_run.py  test_today.py
